證券交易法 2011.12.12

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -6,7 +6,9 @@
 
 > 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 4 本法所稱公司，謂依公司法組織之股份有限公司。
+* 4 本法所稱公司，謂依公司法組織之股份有限公司。本法所稱外國公司，謂以營利為目的，依照外國法律組織登記之公司。
+
+> 釋：一、第一項未修正。二、外國公司之有價證券於我國募集、發行、買賣及私募者，應受本法規範，爰參考公司法第四條及企業併購法第四條規定，增訂第二項外國公司之定義。三、為促進資本市場發展、符合國際趨勢，參照企業併購法對於外國公司無須經認許之規定，且基於我國企業於美國或日本為募集發行ADR或GDR等亦無須經外國政府認許之平等原則，以及考量本法所規範之外國公司於我國境內並無營業之行為，實務上透過主管機關、證券交易所與證券櫃檯買賣中心對募集發行有價證券作實質審核，較形式認許對投資人權益保障更為周全，爰外國公司之有價證券於我國募集、發行、買賣及私募者，該外國公司無須經認許。
 
 * 5 本法所稱發行人，謂募集及發行有價證券之公司，或募集有價證券之發起人。
 
@@ -34,9 +36,9 @@
 
 * 13 本法所稱公開說明書，謂發行人為有價證券之募集或出賣，依本法之規定，向公眾提出之說明文書。
 
-* 14 本法所稱財務報告，指發行人及證券商、證券交易所依法令規定，應定期編送主管機關之財務報告。前項財務報告之內容、適用範圍、作業程序、編製及其他應遵行事項之準則，由主管機關定之。第一項財務報告應經董事長、經理人及會計主管簽名或蓋章，並出具財務報告內容無虛偽或隱匿之聲明。前項會計主管應具備一定之資格條件，並於任職期間內持續專業進修；其資格條件、持續專業進修之最低進修時數及辦理進修機構應具備條件等事項之辦法，由主管機關定之。
+* 14 本法所稱財務報告，指發行人及證券商、證券交易所依法令規定，應定期編送主管機關之財務報告。前項財務報告之內容、適用範圍、作業程序、編製及其他應遵行事項之財務報告編製準則，由主管機關定之，不適用商業會計法第四章、第六章及第七章之規定。第一項財務報告應經董事長、經理人及會計主管簽名或蓋章，並出具財務報告內容無虛偽或隱匿之聲明。前項會計主管應具備一定之資格條件，並於任職期間內持續專業進修；其資格條件、持續專業進修之最低進修時數及辦理進修機構應具備條件等事項之辦法，由主管機關定之。
 
-> 釋：一、第一項文字修正。二、為符合法律授權明確性，於第二項就授權主管機關訂定之財務報告編製準則其內容及範圍予以更明確規定；另酌作文字修正，刪除「以命令」等文字。三、為明確規範虛偽隱匿財務報告內容之相關人員責任範圍，除公司之董事長、經理人及會計主管應於財務報告上簽名或蓋章外，並參酌美國沙氏法案之規定，規範前揭人員應出具財務報告內容無虛偽或隱匿之聲明，爰增訂第三項；未依規定辦理者，依第一百七十八條第一項第二款規定處罰。四、另考量會計主管之能力及操守攸關財務報告之品質與可靠性，故該等人員除應具備良好道德及行為操守外，亦應於任職期間持續專業進修以增進其專業能力，爰增訂第四項，授權主管機關訂定會計主管之資格條件及持續專業進修等應辦理事項之辦法。
+> 釋：一、為增加我國企業財務報告與國際之比較性，提升我國資本市場之國際競爭力，並使國內企業赴海外籌資，毋須重新依當地國會計準則重編財務報告，以適度降低會計處理成本，已規劃公開發行公司自一百零二會計年度起分階段採用國際會計準則。二、因現行商業會計法（以下簡稱商會法）第四章、第六章、第七章對於會計處理之規範，與國際會計準則有所不同，致近年來我國會計準則與國際會計準則接軌過程中，常與商會法有所扞格，而主管機關依第二項規定授權訂定之證券發行人財務報告編製準則，於符合授權之內容、目的及範圍下，應較商會法優先適用，為明確起見，爰修正第二項，明文排除商會法第四章、第六章、第七章規定之適用。三、其餘各項未修正。
 
 * 14.1 公開發行公司、證券交易所、證券商及第十八條所定之事業應建立財務、業務之內部控制制度。主管機關得訂定前項公司或事業內部控制制度之準則。第一項之公司或事業，除經主管機關核准者外，應於每會計年度終了後四個月內，向主管機關申報內部控制聲明書。
 
@@ -104,9 +106,9 @@
 
 > 釋：一、第一項未修正。二、為促進我國與其他國家金融主管機關及國際機構之國際合作，以符合國際證券管理機構組織多邊諮商、合作與資訊交換暸解備忘錄（IOSCO MMOU）A級簽署國要件，爰參考香港及英國立法例，於第二項增列主管機關得依第一項簽訂之條約或協定要求有關之機構、法人、團體及自然人依該條約或協定提供必要資訊予外國政府、機構或國際組織。三、另為促進證券市場國際合作，參考期貨交易法第九十九條及德國證券交易法，增訂第三項及第四項規定。四、為貫徹第二項及第三項規定之效力，相關機構、法人、團體或自然人經主管機關依該二項規定要求提供有關資料或到達辦公處所說明時，不得規避、妨礙或拒絕，爰增訂第五項。
 
-* 22 有價證券之募集及發行，除政府債券或經主管機關核定之其他有價證券外，非向主管機關申報生效後，不得為之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項規定辦理。第一項規定，於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而公開招募者，準用之。依前三項規定申報生效應具備之條件、應檢附之書件、審核程序及其他應遵行事項之準則，由主管機關定之。前項準則有關外匯事項之規定，主管機關於訂定或修正時，應洽商中央銀行同意。
+* 22 有價證券之募集及發行，除政府債券或經主管機關核定之其他有價證券外，非向主管機關申報生效後，不得為之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項規定辦理。出售所持有第六條第一項規定之有價證券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而公開招募者，準用第一項規定。依前三項規定申報生效應具備之條件、應檢附之書件、審核程序及其他應遵行事項之準則，由主管機關定之。前項準則有關外匯事項之規定，主管機關於訂定或修正時，應洽商中央銀行同意。
 
-> 釋：一、配合行政院金融監督管理委員會於九十三年七月一日成立，爰將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，並酌作文字修正。二、第二項酌作文字修正。三、配合本法第七條對募集與私募已有定義，非特定人屬募集之範疇，爰刪除第三項「對非特定人」之贅詞。四、為符合法律授權明確性，就授權主管機關訂定處理準則之內容及範圍，參考「證券投資信託及顧問法」第十條規定修正，且因前三項均屬處理準則規範範圍，爰增訂第四項。五、主管機關依第四項訂定、修正相關處理準則，為配合外匯管理之需要，應洽商中央銀行同意，爰增訂第五項規定。
+> 釋：一、為保護投資人，出售所持有本法第六條第一項規定之有價證券，而公開招募者，均應準用第一項規定，向主管機關申報生效，不限於原第三項所定之公司股票、公司債券，爰修正第三項，並作文字修正。二、其餘各項未修正。
 
 * 22.1 已依本法發行股票之公司，於增資發行新股時，主管機關得規定其股權分散標準。公開發行股票公司股務處理準則，由主管機關定之。
 
@@ -188,9 +190,9 @@
 
 * 35 公司發行股票或公司債券應經簽證，其簽證規則，由主管機關定之。
 
-* 36 已依本法發行有價證券之公司，除經主管機關核准者外，應依下列規定公告並向主管機關申報：一、於每會計年度終了後三個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之年度財務報告。二、於每半會計年度終了後二個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之財務報告。三、於每會計年度第一季及第三季終了後一個月內，公告並申報經會計師核閱之財務報告。四、於每月十日以前，公告並申報上月份營運情形。前項公司有下列情事之一者，應於事實發生之日起二日內公告並向主管機關申報：一、股東常會承認之年度財務報告與公告並向主管機關申報之年度財務報告不一致。二、發生對股東權益或證券價格有重大影響之事項。第一項之公司，應編製年報，於股東常會分送股東；其應記載之事項，由主管機關定之。第一項及第二項公告、申報事項及前項年報，有價證券已在證券交易所上市買賣者，應以抄本送證券交易所；有價證券已在證券商營業處所買賣者，應以抄本送主管機關指定之機構供公眾閱覽。公司在重整期間，第一項所定董事會及監察人之職權，由重整人及重整監督人行使。股票已在證券交易所上市或於證券商營業處所買賣之公司股東常會，應於每會計年度終了後六個月內召開；不適用公司法第一百七十條第二項但書規定。股票已在證券交易所上市或於證券商營業處所買賣之公司董事及監察人任期屆滿之年，董事會未依前項規定召開股東常會改選董事、監察人者，主管機關得依職權限期召開；屆期仍不召開者，自限期屆滿時，全體董事及監察人當然解任。
+* 36 已依本法發行有價證券之公司，除情形特殊，經主管機關另予規定者外，應依下列規定公告並向主管機關申報：一、於每會計年度終了後三個月內，公告並申報經會計師查核簽證、董事會通過及監察人承認之年度財務報告。二、於每會計年度第一季、第二季及第三季終了後四十五日內，公告並申報經會計師核閱及提報董事會之財務報告。三、於每月十日以前，公告並申報上月份營運情形。前項所定情形特殊之適用範圍、公告、申報期限及其他應遵行事項之辦法，由主管機關定之。第一項之公司有下列情事之一者，應於事實發生之日起二日內公告並向主管機關申報：一、股東常會承認之年度財務報告與公告並向主管機關申報之年度財務報告不一致。二、發生對股東權益或證券價格有重大影響之事項。第一項之公司，應編製年報，於股東常會分送股東；其應記載事項、編製原則及其他應遵行事項之準則，由主管機關定之。第一項至第三項公告、申報事項及前項年報，有價證券已在證券交易所上市買賣者，應以抄本送證券交易所；有價證券已在證券商營業處所買賣者，應以抄本送主管機關指定之機構供公眾閱覽。公司在重整期間，第一項所定董事會及監察人之職權，由重整人及重整監督人行使。股票已在證券交易所上市或於證券商營業處所買賣之公司股東常會，應於每會計年度終了後六個月內召開；不適用公司法第一百七十條第二項但書規定。股票已在證券交易所上市或於證券商營業處所買賣之公司董事及監察人任期屆滿之年，董事會未依前項規定召開股東常會改選董事、監察人者，主管機關得依職權限期召開；屆期仍不召開者，自限期屆滿時，全體董事及監察人當然解任。
 
-> 釋：一、原第一項序文「應於每營業年度終了後四個月內公告並向主管機關申報，經會計師查核簽證、董事會通過及監察人承認之年度財務報告。」調整至第一項第一款，並為提昇資訊公開時效，將年度財務報告之公告及申報期限縮短為會計年度終了後三個月內；其餘款次依序調整，並酌作修正。另配合公司法用語，將第一項各款「營業年度」，修正為「會計年度」，本項序言及第一款並酌作文字及標點符號修正。二、依上述調整後，第一項第一款亦有除外條款之適用，即授權主管機關例外得延長年度財務報告公告及申報期限；例如：有關非上市（櫃）之公開發行公司之年度財務報告，仍維持於會計年度終了後四個月內公告及申報。三、考量年度財務報告、年報等公告及申報事項已於公開資訊觀測站公開，爰刪除第四項有關上市公司應將前揭事項抄送證券商同業公會之規定，原上櫃公司應將前揭事項抄送證券商同業公會之規定則修正為應抄送主管機關指定之機構。四、原條文第六項移至第五項。五、第二項序言及第一款酌作文字修正；第三項未修正。六、第六項明定上市或上櫃公司股東常會開會期限。七、增訂第七項，上市或上櫃公司董事及監察人任期屆滿之年，董事會未依前項規定召開股東常會改選董事、監察人者，主管機關得依職權限期召開；屆期仍不召開者，自限期屆滿時，全體董事及監察人當然解任。
+> 釋：一、原序文「除經主管機關核准者外」，為明確計，修正為「除情形特殊，經主管機關另予規定者外」，並酌作文字修正。二、增訂第二項，就第一項所定情形特殊之適用範圍、公告、申報期限及其他應遵行事項之辦法，授權主管機關定之。三、原第二項項次遞移為第三項，並酌修文字。四、原第三項項次遞移為第四項，並定明第一項公司年報之應記載事項、編製原則及其他應遵行事項之準則，由主管機關定之。五、原第四、五、六、七項項次逐次遞移，並酌修文字。
 
 * 36.1 公開發行公司取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為，其適用範圍、作業程序、應公告、申報及其他應遵行事項之處理準則，由主管機關定之。
 
@@ -202,9 +204,9 @@
 
 * 38 主管機關為有價證券募集或發行之核准，因保護公益或投資人利益，對發行人、證券承銷商或其他關係人，得命令其提出參考或報告資料，並得直接檢查其有關書表、帳冊。有價證券發行後，主管機關得隨時命令發行人提出財務、業務報告或直接檢查財務、業務狀況。
 
-* 38.1 主管機關認為必要時，得隨時指定會計師、律師、工程師或其他專門職業或技術人員，檢查發行人、證券承銷商或其他關係人之財務、業務狀況及有關書表、帳冊，並向主管機關提出報告或表示意見，其費用由被檢查人負擔。
+* 38.1 主管機關認為必要時，得隨時指定會計師、律師、工程師或其他專門職業或技術人員，檢查發行人、證券承銷商或其他關係人之財務、業務狀況及有關書表、帳冊，並向主管機關提出報告或表示意見，其費用由被檢查人負擔。繼續一年以上，持有股票已在證券交易所上市或於證券商營業處所買賣之公司已發行股份總數百分之三以上股份之股東，對特定事項認有重大損害公司股東權益時，得檢附理由、事證及說明其必要性，申請主管機關就發行人之特定事項或有關書表、帳冊進行檢查，主管機關認有必要時，依前項規定辦理。
 
-> 釋：一、本條新增。二、為強化主管機關檢查之績效，賦予主管機關得隨時指定具備專業技術、知識及經驗之專業人員，更深入檢查財務、業務狀況及有關書表、帳冊，以保障投資安全。
+> 釋：一、第一項未修正。二、為保護少數股東，參考公司法第二百四十五條規定，增訂第二項繼續一年以上，持有股票已在證券交易所上市或於證券商營業處所買賣之公司已發行股份總數百分之三以上股份之股東，，對特定事項認有重大損害公司股東權益時，得檢附理由、事證及說明其必要性，申請主管機關檢查發行人之特定事項或有關書表、帳冊，另為免少數股東濫用本項規定干擾公司之正常營運，其申請須經主管機關審酌認有必要時，始依第一項規定委託相關人員進行檢查，檢查費用仍由被檢查人負擔。
 
 * 39 主管機關於審查發行人所申報之財務報告、其他參考或報告資料時，或於檢查其財務、業務狀況時，發現發行人有不符合法令規定之事項，除得以命令糾正外，並得依本法處罰。
 
@@ -506,19 +508,31 @@
 
 * 140 證券交易所應訂定有價證券上市審查準則及上市契約準則，申請主管機關核定之。
 
-* 141 證券交易所應與上市有價證券之公司訂立有價證券上市契約，其內容不得牴觸上市契約準則之規定，並應申報主管機關核准。
+* 141 證券交易所與上市有價證券之公司訂立之有價證券上市契約，其內容不得牴觸上市契約準則之規定，並應報請主管機關備查。
 
-* 142 發行人發行之有價證券，非於其上市契約經前條之核准，不得於證券交易所之有價證券集中交易市場為買賣。
+> 釋：一、考量目前發行人申請其有價證券上市，係由證券交易所實質審核，故將證券交易所應與上市有價證券之公司訂立有價證券上市契約，並申報主管機關「核准」之規定，修正為報請主管機關「備查」，以符合實際狀況。二、主管機關對於證券交易所通過之上市決議案，基於保護公益或投資人利益之必要，仍得依本法第一百六十一條規定，停止、禁止、變更或撤銷其決議案，尚不致因本條之修正而危及證券市場之安全。
+
+* 142 發行人公開發行之有價證券於發行人與證券交易所訂立有價證券上市契約後，始得於證券交易所之有價證券集中交易市場為買賣。
+
+> 釋：配合第一百四十一條將證券交易所與上市有價證券之公司訂立之有價證券上市契約修正為報請主管機關備查，爰將本條修正為發行人公開發行之有價證券於發行人與證券交易所訂立有價證券上市契約後，方得於證券交易所之有價證券集中交易市場為買賣。
 
 * 143 有價證券上市費用，應於上市契約中訂定；其費率由證券交易所申報主管機關核定之。
 
-* 144 證券交易所得依法令或上市契約之規定，報經主管機關核准，終止有價證券上市。
+* 144 證券交易所得依法令或上市契約之規定終止有價證券上市，並應報請主管機關備查。
 
-* 145 於證券交易所上市之有價證券，其發行人得依上市契約申請終止上市。證券交易所對於前項申請之處理，應經主管機關核准。
+> 釋：一、鑒於證券交易所同意有價證券上市，屬其私權行使之範疇，故證券交易所終止有價證券上市，亦應回歸其私權行使，加以現行實務作法，係證券交易所依其所訂有價證券上市契約、營業細則及相關處理程序之規定，實質審核有價證券之終止上市，爰將應報經主管機關「核准」之規定，修正為應報請主管機關「備查」，以符合實際狀況，並酌作文字修正。二、主管機關對於證券交易所所為終止有價證券上市之處置，基於保護公益或投資人利益之必要，仍得依本法第一百六十一條規定，停止、禁止、變更或撤銷其處置，尚不致因本條之修正而危及證券市場之安全或損及上市有價證券公司與投資人之權益。
 
-* 146 主管機關為前條之核准時，應指定生效日期，並視為上市契約終止之日期。
+* 145 於證券交易所上市之有價證券，其發行人得依上市契約申請終止上市。證券交易所應擬訂申請終止上市之處理程序，報請主管機關核定；修正時，亦同。
 
-* 147 證券交易所依法令或上市契約之規定，或為保護公眾之利益，就上市有價證券停止或回復其買賣時，應申報主管機關核准。
+> 釋：一、第一項未修正。二、修正第二項，規定證券交易所應擬訂上市有價證券發行人申請有價證券終止上市之處理程序，報請主管機關核定，以茲明確，並酌作文字修正。
+
+* 146 （刪除）
+
+> 釋：一、本條刪除。二、證券交易所終止有價證券上市，屬私權行使之範疇，不宜再由主管機關指定終止上市之生效日期，而宜回歸證券交易所依其職權訂定相關作業細則及修正後之前條第二項處理程序辦理，爰刪除本條。
+
+* 147 證券交易所依法令或上市契約之規定，或為保護公眾之利益，就上市有價證券停止或回復其買賣時，應報請主管機關備查。
+
+> 釋：一、鑒於證券交易所同意或終止有價證券上市，乃屬其私權行使之範疇，故證券交易所停止或回復上市有價證券之買賣，亦應回歸其私權行使。目前實務作法即由證券交易所依其營業細則進行實質審查，爰將證券交易所就上市有價證券停止或回復其買賣時，應申報主管機關「核准」之規定，改為報請主管機關「備查」。二、主管機關對於證券交易所所為停止上市有價證券買賣或回復其買賣之處置，基於保護公益或投資人利益之必要，仍得依本法第一百六十一條規定，停止、禁止、變更或撤銷其處置，尚不致因本條之修正而危及證券市場之安全或損及上市有價證券公司與投資人之權益。
 
 * 148 於證券交易所上市有價證券之公司，有違反本法或依本法發布之命令時，主管機關為保護公益或投資人利益，得命令該證券交易所停止該有價證券之買賣或終止上市。
 
@@ -568,21 +582,37 @@
 
 * 165 證券交易所及其會員，或與證券交易所訂有使用有價證券集中交易市場契約之證券自營商、證券經紀商，對監理人員本於法令所為之指示，應切實遵行。
 
-* 166 依本法所為有價證券交易所生之爭議，當事人得依約定進行仲裁。但證券商與證券交易所或證券商相互間，不論當事人間有無訂立仲裁契約，均應進行仲裁。前項仲裁，除本法規定外，依商務仲裁條例之規定。
+* 165.1 外國公司所發行之股票，首次經證券交易所或證券櫃檯買賣中心同意上市、上櫃買賣或登錄興櫃時，其股票未在國外證券交易所交易者，除主管機關另有規定外，其有價證券之募集、發行、私募及買賣之管理、監督，準用第五條至第八條、第十三條至第十四條之一、第十四條之二第一項至第三項、第五項、第十四條之三、第十四條之四第一項、第二項、第五項、第六項、第十四條之五、第十九條至第二十一條、第二十二條至第二十五條之一、第二十六條之三、第二十七條、第二十八條之一第二項至第四項、第二十八條之二、第二十八條之四至第三十二條、第三十三條第一項、第二項、第三十五條至第四十三條之八、第六十一條、第一百三十九條、第一百四十一條至第一百四十五條、第一百四十七條、第一百四十八條、第一百五十條、第一百五十五條至第一百五十七條之一規定。
 
-> 釋：一、參照外國立法例，對有價證券交易所生之爭議，並不採強制仲裁（如日本證券交易法第一百五十七條）。以我國已開辦僑外證券投資信託業務，在海外發行受益憑證有關事項發生爭議，依現行規定須強制仲裁，恐有窒礙難行之處，故非證券商之間，及證券商或交易所與投資人之間之爭議宜改採任意仲裁。至於證券商與證券交易所或證券商相互間，因平時業務往來密切，遇有爭議事項，應先以協調之方式解決，而宜仍維持現行強制仲裁，爰修正第一項。二、第二項未修正。
+> 釋：一、本條新增。二、為保障投資人及兼顧監理機制之衡平性，參考銀行法第一百二十三條及公司法第三百七十七條規定，並考量外國公司所發行之股票於首次經證券交易所或證券櫃檯買賣中心同意上市、上櫃或登錄興櫃時，其股票未在國外證券交易所交易者（以下稱第一上市櫃及興櫃外國公司），因其並未受外國證券主管機關相當之監理，故除部分事項（如董監持股成數規範等）因該第一上市櫃及興櫃外國公司據以組織登記之外國法令與我國規定或有不同，恐生衝突，或為與國際規範一致外，其管理、監督宜比照我國公開發行公司準用本法之相關規定，例如補辦相關發行審查程序、建立內部控制制度、設立獨立董事、審計委員會之組成、國內外募集及發行有價證券之申報、定期公告申報財務報告及公開說明書應記載事項等。三、第一上市櫃及興櫃外國公司據以組織登記之外國法律，如對保障投資人較有利者，自得適用其母國法律，故規定除主管機關另有規定外，第一上市櫃及興櫃外國公司有價證券之募集、發行、私募及買賣之管理、監督，應準用本法相關規定，並逐一列出其準用之條文。
+
+* 165.2 前條以外之外國公司所發行股票或表彰股票之有價證券已在國外證券交易所交易者或符合主管機關所定條件之外國金融機構之分支機構及外國公司之從屬公司，其有價證券經證券交易所或證券櫃檯買賣中心同意上市或上櫃買賣者，除主管機關另有規定外，其有價證券在中華民國募集、發行及買賣之管理、監督，準用第五條至第八條、第十三條、第十四條第一項、第三項、第十九條至第二十一條、第二十二條、第二十三條、第二十九條至第三十二條、第三十三條第一項、第二項、第三十五條、第三十六條第一項至第六項、第三十八條至第四十條、第四十二條、第四十三條、第四十三條之一第二項至第四項、第四十三條之二至第四十三條之五、第六十一條、第一百三十九條、第一百四十一條至第一百四十五條、第一百四十七條、第一百四十八條、第一百五十條、第一百五十五條至第一百五十七條之一規定。
+
+> 釋：一、本條新增。二、考量修正條文第一百六十五條之一以外之外國公司所發行股票或表彰股票之有價證券已在國外證券交易所交易者或符合主管機關所定條件之外國金融機構分支機構及外國公司之從屬公司（例如行政院金融監督管理委員會九十六年六月一日金管證一字第０九六００二五七０三六號函對於外國金融機構之分支機構及外國公司之從屬公司所定之相關資格條件），因其已受外國證券主管機關相當之監理，即第二上市櫃外國公司有價證券於國外募集、發行及買賣之行為尚無必要準用本法之相關規定，僅就其有價證券於中華民國募集、發行及買賣之行為，除主管機關另有規定外（例如外國公司據以組織登記之外國法律，對保障投資人較有利者，得適用其母國法律），準用本法相關條文規定為管理、監督，並逐一列出其準用之條文。
+
+* 165.3 外國公司，應在中華民國境內指定其依本法之訴訟及非訴訟之代理人，並以之為本法在中華民國境內之負責人。前項代理人應在中華民國境內有住所或居所。外國公司應將第一項代理人之姓名、住所或居所及授權文件向主管機關申報；變更時，亦同。
+
+> 釋：一、本條新增。二、為便於對外國公司之行政管理，爰參考公司法第三百七十二條、第三百八十六條等規定，增訂本條。三、本法所規範之外國公司，嗣後如於我國境內設立分公司或有營業、借貸等行為，仍應依公司法第三百七十二條、第三百八十六條或其他法律規定辦理。
+
+* 166 依本法所為有價證券交易所生之爭議，當事人得依約定進行仲裁。但證券商與證券交易所或證券商相互間，不論當事人間有無訂立仲裁契約，均應進行仲裁。前項仲裁，除本法規定外，依仲裁法之規定。
+
+> 釋：配合商務仲裁條例業於民國八十七年修正名稱為仲裁法，本條第二項酌作文字修正。
 
 * 167 爭議當事人之一造違反前條規定，另行提起訴訟時，他造得據以請求法院駁回其訴。
 
 * 168 爭議當事人之仲裁人不能依協議推定另一仲裁人時，由主管機關依申請或以職權指定之。
 
-* 169 證券商對於仲裁之判斷，或依商務仲裁條例第二十八條成立之和解，延不履行時，除有商務仲裁條例第二十三條情形，經提起撤銷判斷之訴者外，在其未履行前，主管機關得以命令停止其業務。
+* 169 證券商對於仲裁之判斷，或依仲裁法第四十四條成立之和解，延不履行時，除有仲裁法第四十條情形，經提起撤銷判斷之訴者外，在其未履行前，主管機關得以命令停止其業務。
 
-* 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
+> 釋：配合商務仲裁條例名稱及條次變更，修正本條引敘之條次，並酌作文字修正。
 
-* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項、第一百五十七條之一第一項或第二項規定。二、已依本法發行有價證券公司之董事、監察人、經理人或受雇人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他正犯或共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
+* 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及仲裁法。
 
-> 釋：一、配合第一百五十七條之一第二項之增訂，修正第一項第一款規定增列違反上開規定之處罰。另同項第一款及第二款酌作文字修正。二、其餘各項未修正。
+> 釋：配合商務仲裁條例業於民國八十七年修正名稱為仲裁法，本條酌作文字修正。
+
+* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項、第一百五十七條之一第一項或第二項規定。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產，致公司遭受損害達新臺幣五百萬元。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。有第一項第三款之行為，致公司遭受損害未達新臺幣五百萬元者，依刑法第三百三十六條及第三百四十二條規定處罰。犯前三項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他正犯或共犯者，免除其刑。犯第一項至第三項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他正犯或共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項至第三項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。違反第一百六十五條之一或第一百六十五條之二準用第二十條第一項、第二項、第一百五十五條第一項、第二項、第一百五十七條之一第一項或第二項規定者，依第一項第一款及第二項至前項規定處罰。第一項第二款、第三款及第二項至第七項規定，於外國公司之董事、監察人、經理人或受僱人適用之。
+
+> 釋：照黨團協商條文通過。
 
 * 172 證券交易所之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
@@ -592,39 +622,41 @@
 
 > 釋：罰金型修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
 
-* 174 有下列情事之一者，處一年以上七年以下有期徒刑，得併科新臺幣二千萬元以下罰金：一、於依第三十條、第四十四條第一項至第三項或第九十三條規定之申請事項為虛偽之記載者。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾者。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由者。四、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載者。五、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載者。六、於前款之財務報告上簽章之經理人或主辦會計人員，為財務報告內容虛偽之記載者。但經他人檢舉、主管機關或司法機關進行調查前，已提出更正意見並提供證據向主管機關報告者，減輕或免除其刑。七、就發行人或某種有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之者。八、發行人之董事、經理人或受僱人違反法令、章程或逾越董事會授權之範圍，將公司資金貸與他人、或為他人以公司資產提供擔保、保證或為票據之背書，致公司遭受重大損害者。九、意圖妨礙主管機關檢查或司法機關調查，偽造、變造、湮滅、隱匿、掩飾工作底稿或有關紀錄、文件者。有下列情事之一者，處五年以下有期徒刑，得科或併科新臺幣一千五百萬元以下罰金：一、律師對公司有關證券募集、發行或買賣之契約、報告書或文件，出具虛偽或不實意見書者。二、會計師對公司申報或公告之財務報告、文件或資料有重大虛偽不實或錯誤情事，未善盡查核責任而出具虛偽不實報告或意見；或會計師對於內容存有重大虛偽不實或錯誤情事之公司財務報告，未依有關法規規定、一般公認審計準則查核，致未予敘明者。犯前項之罪，如有嚴重影響股東權益或損及證券交易市場穩定者，得加重其刑至二分之一。發行人之職員、受僱人犯第一項第六款之罪，其犯罪情節輕微者，得減輕其刑。主管機關對於有第二項第二款情事之會計師，應予以停止執行簽證工作之處分。
+* 174 有下列情事之一者，處一年以上七年以下有期徒刑，得併科新臺幣二千萬元以下罰金：一、於依第三十條、第四十四條第一項至第三項、第九十三條、第一百六十五條之一或第一百六十五條之二準用第三十條規定之申請事項為虛偽之記載。二、對有價證券之行情或認募核准之重要事項為虛偽之記載而散布於眾。三、發行人或其負責人、職員有第三十二條第一項之情事，而無同條第二項免責事由。四、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料之內容有虛偽之記載。五、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務文件之內容有虛偽之記載。六、於前款之財務報告上簽章之經理人或會計主管，為財務報告內容虛偽之記載。但經他人檢舉、主管機關或司法機關進行調查前，已提出更正意見並提供證據向主管機關報告者，減輕或免除其刑。七、就發行人或特定有價證券之交易，依據不實之資料，作投資上之判斷，而以報刊、文書、廣播、電影或其他方法表示之。八、發行人之董事、經理人或受僱人違反法令、章程或逾越董事會授權之範圍，將公司資金貸與他人、或為他人以公司資產提供擔保、保證或為票據之背書，致公司遭受重大損害。九、意圖妨礙主管機關檢查或司法機關調查，偽造、變造、湮滅、隱匿、掩飾工作底稿或有關紀錄、文件。有下列情事之一者，處五年以下有期徒刑，得科或併科新臺幣一千五百萬元以下罰金：一、律師對公司、外國公司有關證券募集、發行或買賣之契約、報告書或文件，出具虛偽或不實意見書。二、會計師對公司、外國公司申報或公告之財務報告、文件或資料有重大虛偽不實或錯誤情事，未善盡查核責任而出具虛偽不實報告或意見；或會計師對於內容存有重大虛偽不實或錯誤情事之公司、外國公司之財務報告，未依有關法規規定、一般公認審計準則查核，致未予敘明。三、違反第二十二條第一項至第三項規定。犯前項之罪，如有嚴重影響股東權益或損及證券交易市場穩定者，得加重其刑至二分之一。發行人之職員、受僱人犯第一項第六款之罪，其犯罪情節輕微者，得減輕其刑。主管機關對於有第二項第二款情事之會計師，應予以停止執行簽證工作之處分。外國公司為發行人者，該外國公司或外國公司之董事、經理人、受僱人、會計主管違反第一項第二款至第九款規定，依第一項及第四項規定處罰。違反第一百六十五條之一或第一百六十五條之二準用第二十二條規定，依第二項及第三項規定處罰。
 
 > 釋：照黨團協商條文通過。
 
-* 174.1 第一百七十一條第一項第二款、第三款或前條第一項第八款之已依本法發行有價證券公司之董事、監察人、經理人或受僱人所為之無償行為，有害及公司之權利者，公司得聲請法院撤銷之。前項之公司董事、監察人、經理人或受僱人所為之有償行為，於行為時明知有損害於公司之權利，且受益人於受益時亦知其情事者，公司得聲請法院撤銷之。依前二項規定聲請法院撤銷時，得並聲請命受益人或轉得人回復原狀。但轉得人於轉得時不知有撤銷原因者，不在此限。第一項之公司董事、監察人、經理人或受僱人與其配偶、直系親屬、同居親屬、家長或家屬間所為之處分其財產行為，均視為無償行為。第一項之公司董事、監察人、經理人或受僱人與前項以外之人所為之處分其財產行為，推定為無償行為。第一項及第二項之撤銷權，自公司知有撤銷原因時起，一年間不行使，或自行為時起經過十年而消滅。
+* 174.1 第一百七十一條第一項第二款、第三款或前條第一項第八款之已依本法發行有價證券公司之董事、監察人、經理人或受僱人所為之無償行為，有害及公司之權利者，公司得聲請法院撤銷之。前項之公司董事、監察人、經理人或受僱人所為之有償行為，於行為時明知有損害於公司之權利，且受益人於受益時亦知其情事者，公司得聲請法院撤銷之。依前二項規定聲請法院撤銷時，得並聲請命受益人或轉得人回復原狀。但轉得人於轉得時不知有撤銷原因者，不在此限。第一項之公司董事、監察人、經理人或受僱人與其配偶、直系親屬、同居親屬、家長或家屬間所為之處分其財產行為，均視為無償行為。第一項之公司董事、監察人、經理人或受僱人與前項以外之人所為之處分其財產行為，推定為無償行為。第一項及第二項之撤銷權，自公司知有撤銷原因時起，一年間不行使，或自行為時起經過十年而消滅。前六項規定，於外國公司之董事、監察人、經理人或受僱人適用之。
 
-> 釋：一、本條新增。二、參考民法第二百四十四條第一項規定，應允許公司得聲請法院撤銷之，以保護公司之權利，爰為第一項規定。三、參照民法第二百四十四條第二項規定，應允許公司得聲請法院撤銷之，俾受益人及公司之利益，均得保護，爰為第二項規定。四、參考民法第二百四十四條第四項規定，於第三項賦予公司對明知有損害公司之受益人或轉得人有回復原狀之請求權。但轉得人於轉得時不知有撤銷原因者，為保障其交易安全，爰為例外規定。五、為利公司撤銷權之行使，並防止公司之董事、監察人、經理人或受僱人假藉與其配偶、直系親屬、同居親屬、家長或家屬間所為之處分其財產行為，以規避賠償責任，爰參酌破產法第十五條第二項規定，於第四項將其擬制為無償行為。六、第一項之公司董事、監察人、經理人或受僱人，與第四項以外之人所為之處分財產行為，則於第五項為舉證責任倒置之規定，將其推定為無償行為。七、撤銷權若永久存續，則權利狀態永不確定，實有害於交易之安全，爰參考民法第二百四十五條，於第六項就第一項、第二項之撤銷權為除斥期間之規定。
+> 釋：一、配合本法新增外國公司章之規定，基於我國公司及外國公司平等原則，以及參照銀行法第一百二十五條之五規定，增訂第七項，定明前六項規定，於外國公司之董事、監察人、經理人或受僱人適用之。二、外國公司之董事、監察人、經理人或受僱人於中華民國境內所為之無償行為或有償行為，或涉及該外國公司在中華民國境內財產之無償行為或有償行為有害及該外國公司之權利時，該外國公司即得援引第七項之規定向我國法院聲請撤銷，以保障該外國公司及其股東之權利。三、第一項至第六項未修正。
 
-* 174.2 第一百七十一條第一項第二款、第三款及第一百七十四條第一項第八款之罪，為洗錢防制法第三條第一項所定之重大犯罪，適用洗錢防制法之相關規定。
+* 174.2 第一百七十一條第一項第二款、第三款、第九項適用第一項第二款、第三款、第一百七十四條第一項第八款及第六項適用第一項第八款之罪，為洗錢防制法第三條第一項所定之重大犯罪，適用洗錢防制法之相關規定。
 
-> 釋：一、本條新增。二、按第一百七十一條為最重本刑十年以下有期徒刑之罪，第一百七十四條第一項第八款之罪為一年以上七年以下有期徒刑之罪，均對證券市場交易秩序及投資人權益造成重大影響，為防止該等犯罪行為人掩飾、隱匿因自己犯罪所得財物或財產上利益，爰增訂本條，將第一百七十一條第一項第二款、第三款及第一百七十四條第一項第八款之罪，列為洗錢防制法第三條第一項所定之重大犯罪，並適用洗錢防制法相關規定。
+> 釋：照黨團協商條文通過。
 
-* 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第三項、第四十三條之五第二項、第三項、第四十三條之六第一項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
+* 175 違反第十八條第一項、第二十八條之二第一項、第四十三條第一項、第四十三條之一第三項、第四十三條之五第二項、第三項、第四十三條之六第一項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。違反第一百六十五條之一或第一百六十五條之二準用第四十三條第一項、第四十三條之一第三項、第四十三條之五第二項、第三項規定，或違反第一百六十五條之一準用第二十八條之二第一項、第四十三條之六第一項規定者，依前項規定處罰。違反第四十三條之一第二項未經公告而為公開收購、第一百六十五條之一或第一百六十五條之二準用第四十三條之一第二項未經公告而為公開收購者，依第一項規定處罰。
 
-> 釋：一、配合強制公開收購制度之增列，增列違反強制公開收購規定之刑責；另增列違反本會命令公開收購人變更公開收購申報事項並重行申報及公告、或停止公開收購行為之刑責。二、對於有價證券之私募違反私募應經股東會決議及對象之規定者，明定相關罰則。
+> 釋：一、原條文有關違反第二十二條未向主管機關申報生效而為有價證券募集、發行或公開招募之處罰提高為五年以下有期徒刑，並移列至第一百七十四條第二項第三款規定，理由同第一百七十四條說明四。二、增訂第二項，定明違反第一百六十五條之一、第一百六十五條之二準用第一項所列條文之處罰規定。三、原第一百七十五條及第一百七十八條就公開收購人違反第四十三條之一第二項規定應先向主管機關申報並公告後，始得為公開收購行為，分別訂有刑罰及行政罰規定，而未就違反行為之影響程度有所區分。考量公開收購人未經公告而為公開收購，影響市場交易秩序重大，而有刑事處罰之必要，爰將違反第四十三條之一第二項未經公告而為公開收購者以及第一百六十五條之一、第一百六十五條之二準用第四十三條之一第二項未經公告而為公開收購之處罰增訂於第三項，以期明確。
 
 * 176 （刪除）
 
 > 釋：一、第七十四條及第八十四條均屬行政上消極防弊規定，無處刑罰之必要，宜改為行政罰。二、為符合刑罰條文在前，行政罰條文在後之體例，本條移列為第一百七十七條之一，本條刪除。
 
-* 177 有下列情事之一者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金：一、違反第三十一條第一項、第三十四條、第四十條、第四十三條之四第一項、第四十三條之八第一項、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百五十條或第一百六十五條規定。二、違反主管機關依第六十一條所為之規定。
+* 177 違反第三十四條、第四十條、第四十三條之八第一項、第四十五條、第四十六條、第五十條第二項、第一百十九條、第一百五十條或第一百六十五條規定者，處一年以下有期徒刑、拘役或科或併科新臺幣一百二十萬元以下罰金。違反第一百六十五條之一或第一百六十五條之二準用第四十條、第一百五十條規定，或違反第一百六十五條之一準用第四十三條之八第一項規定者，依前項規定處罰。
 
-> 釋：一、修正本條第一款，刪除第一百二十八條刑罰之規定。二、第一百二十八條修正將證券交易所其股份轉讓限於證券商之規定予以刪除，僅其單一股東及全體外國人持有證券交易所之股份比率、總額等予以規定，故參考期貨交易法對違反同法第三十四條規定而持有期貨交易所股份超過法定比率者，並無刑責之規定，爰刪除違反第一百二十八條之刑罰規定。三、配合法制用語，酌作文字修正。
+> 釋：一、參照證券投資信託及顧問法第一百十二條未依規定交付公開說明書者，處罰鍰之規定，爰刪除第一款違反第三十一條第一項未依規定交付公開說明書及第四十三條之四第一項未依規定交付公開收購說明書之處罰，另於第一百七十八條第一項第二款改處以行政罰；又考量第六十一條有關有價證券買賣融資融券之額度、期限及融資比率、融券保證金成數之規定，尚非屬嚴重之經濟犯罪，爰刪除其刑罰之規定，另於第一百七十八條第一項第二款改處以行政罰，爰酌作修正後列為修正條文第一項。二、增訂第二項，就第一百六十五條之一、第一百六十五條之二準用第一項所列之條文者，亦為處罰之規定。
 
 * 177.1 違反第七十四條或第八十四條之規定者，處相當於所取得有價證券價金額以下之罰鍰。但不得少於新臺幣十二萬元。
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有下列情事之一者，處新臺幣二十四萬元以上二百四十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十六條之一、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條或第一百五十二條規定。二、違反第十四條第三項、第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十一條之一第五項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十六條第四項、第六項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十九條或第一百五十九條規定。三、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條第一項所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕、妨礙或規避。四、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條第一項所定之事業，於依本法或主管機關基於本法所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存。五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式、召開股東會公司應遵守之事項及對於主管機關要求提供之資料拒絕提供之規定。六、違反主管機關依第二十六條第二項所定公開發行公司董事、監察人股權成數及查核實施規則有關通知及查核之規定。七、違反第二十六條之三第八項規定未訂定議事規範或違反主管機關依同條項所定辦法有關主要議事內容、作業程序、議事錄應載明事項及公告之規定，或違反主管機關依第三十六條之一所定準則有關取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為之適用範圍、作業程序、應公告及申報之規定。八、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所定辦法有關買回股份之程序、價格、數量、方式、轉讓方法及應申報公告事項之規定。九、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所定辦法有關收購有價證券之範圍、條件、期間、關係人及申報公告事項之規定。有前項第二款至第七款規定情事之一，主管機關除依前項規定處罰鍰外，並應令其限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次各處新臺幣四十八萬元以上四百八十萬元以下罰鍰，至辦理為止。檢舉違反第二十五條之一案件因而查獲者，應予獎勵；其辦法由主管機關定之。
+* 178 有下列情事之一者，處新臺幣二十四萬元以上二百四十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十六條之一、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條、第一百六十五條之一或第一百六十五條之二準用第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條，或第一百六十五條之一準用第二十二條之二第一項、第二項規定。二、違反第十四條第三項、第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十一條之一第五項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十一條第一項、第三十六條第五項、第七項、第四十一條、第四十三條之一第一項、第四十三條之四第一項、第四十三條之六第五項至第七項、第五十八條、第六十一條、第六十九條第一項、第七十九條、第一百五十九條規定、第一百六十五條之一或第一百六十五條之二準用第十四條第三項、第三十一條第一項、第三十六條第五項、第四十三條之四第一項、第六十一條，或違反第一百六十五條之一準用第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十六條第七項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項規定。三、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條第一項所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕、妨礙或規避。四、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條第一項所定之事業，於依本法或主管機關基於本法所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存。五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式、召開股東會公司應遵守之事項及對於主管機關要求提供之資料拒絕提供之規定，或第一百六十五條之一準用第二十五條之一規定。六、違反主管機關依第二十六條第二項所定公開發行公司董事、監察人股權成數及查核實施規則有關通知及查核之規定。七、違反第二十六條之三第八項規定未訂定議事規範或違反主管機關依同條項所定辦法有關主要議事內容、作業程序、議事錄應載明事項及公告之規定，或違反主管機關依第三十六條之一所定準則有關取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為之適用範圍、作業程序、應公告及申報之規定，或第一百六十五條之一準用第二十六條之三第八項、第三十六條之一規定。八、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所定辦法有關買回股份之程序、價格、數量、方式、轉讓方法及應申報公告事項之規定，或第一百六十五條之一準用第二十八條之二第二項至第七項規定。九、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所定辦法有關收購有價證券之範圍、條件、期間、關係人及申報公告事項之規定，或第一百六十五條之一、第一百六十五條之二準用第四十三條之一第四項、第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項規定。有前項第二款至第七款規定情事之一，主管機關除依前項規定處罰鍰外，並應令其限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次各處新臺幣四十八萬元以上四百八十萬元以下罰鍰，至辦理為止。檢舉違反第二十五條之一案件因而查獲者，應予獎勵；其辦法由主管機關定之。外國公司為發行人時，該外國公司違反第一項第三款或第四款規定，依第一項及第二項規定處罰。
 
-> 釋：一、配合第二十一條之一之修正，對於違反該條第五項規定者，亦有處以罰鍰之必要，爰修正第一項第二款增列其處罰，另同項同款第三十六條第四項後增列「、第六項」。二、第一項第五款修正為：「五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式、召開股東會公司應遵守之事項及對於主管機關要求提供之資料拒絕提供之規定。」及第六款末句刪除「股權成數、」。三、第二項未修正；第三項標點符號酌作修正。
+> 釋：照黨團協商條文通過。
 
-* 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
+* 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。外國公司違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
+
+> 釋：一、第一項未修正。二、配合本法新增第五章之一外國公司章，新增第二項規定，定明外國公司違反本法之規定者，依本章各條之規定處罰其為行為之負責人。三、第二項所稱為行為之負責人，係指實際負責人（公司法第八條負責人之定義可資參照），另外國公司之負責人包括依第一百六十五條之三規定應在中華民國境內指定其依本法之訴訟及非訴訟之代理人，並以之為本法在中華民國境內之負責人在內，至外國公司違反本法為行為之負責人為誰，由主管機關及司法機關依個案事實認定之。
 
 * 180 （刪除）
 
@@ -652,7 +684,7 @@
 
 > 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，九十五年五月五日修正之條文自九十五年七月一日施行，九十八年五月二十六日修正之條文自九十八年十一月二十三日施行，及九十九年五月四日修正之第三十六條自一百零一年一月一日施行外，自公布日施行。
+* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，九十五年五月五日修正之條文自九十五年七月一日施行，九十八年五月二十六日修正之條文自九十八年十一月二十三日施行，九十九年五月四日修正之第三十六條自一百零一年一月一日施行，及一百年十二月十二日修正之第三十六條第一項第二款自一百零二會計年度施行外，自公布日施行。
 
-> 釋：照黨團協商條文通過。
+> 釋：句末增訂：「及一百年十二月十二日修正之第三十六條第一項第二款自一百零二會計年度施行外」。其餘內容未修正。
 
